<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/howtouse_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <ImageView
            android:id="@+id/background"
            android:src="@drawable/background"
            android:contentDescription="background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="0dp"
            android:scaleType="fitXY" />



        <View
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@drawable/top"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <View
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/top"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <View   android:id="@+id/howtousebox"
            android:background="@drawable/howtousebox"
            android:layout_marginStart="80dp"
            android:layout_marginTop="200dp"
            android:layout_width="274dp"
            android:layout_height="60dp" />

        <TextView android:id="@+id/howtousetext"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="205dp"
            android:layout_width="182dp"
            android:layout_height="49dp"
            android:text="@string/purpose"
            />

        <View
            android:id="@+id/textbox"
            android:background="@drawable/textbox"
            android:alpha="0.15999999642372"
            android:layout_marginStart="60dp"
            android:layout_marginTop="300dp"
            android:layout_width="300dp"
            android:layout_height="330dp" />

        <TextView
            android:id="@+id/text"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="300dp"
            android:layout_width="288dp"
            android:layout_height="309dp"
            android:text="@string/purposeexplain" />

        <View
            android:layout_width="400dp"
            android:layout_height="124dp"
            android:layout_marginTop="35dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/rounded_corners" />

        <ImageView
            android:id="@+id/kwlogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="kwlogo"
            android:src="@drawable/kwlogo" />

        <ImageView
            android:id="@+id/bsllogo"
            android:layout_width="243dp"
            android:layout_height="100dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="35dp"
            android:contentDescription="logo2"
            android:src="@drawable/bsllogo" />


        <TextView
            android:id="@+id/capstonetext"
            android:layout_width="183.2dp"
            android:layout_height="23.2dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="130dp"
            android:gravity="center"
            android:text="@string/capstone"
            android:textColor="@color/black"
            android:textSize="15sp" />




        <RelativeLayout
            android:id="@+id/group_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp">




        </RelativeLayout>

        <ImageButton
            android:id="@+id/back1_button"
            android:layout_marginTop="750dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="TODO" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>