<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="323dp">
        <ImageView
            android:id="@+id/background"
            android:src="@drawable/background"
            android:contentDescription="background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvBluetoothStatus"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:text="status"

            />

        <ImageButton
            android:id="@+id/resultbox"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="680dp"
            android:src="@drawable/resultbox" />
        <TextView
            android:id="@+id/resulttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="685dp"
            android:text="@string/start"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/box"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="680dp"
            android:src="@drawable/resultbox" />
        <TextView
            android:id="@+id/boxtext"
            android:layout_width="56dp"
            android:layout_height="52dp"
            android:layout_marginStart="245dp"
            android:layout_marginTop="685dp"
            android:text="@string/stop"
            android:textColor="@color/black"
            android:textSize="30sp" />



        <ImageButton
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="130dp"
            android:src="@drawable/resultbox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnConnect"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="-63dp"
            android:text="연결하기"
            android:textSize="30sp" />

        <View
            android:id="@+id/capbox"
            android:layout_width="302dp"
            android:layout_height="404dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="240dp"
            android:background="@drawable/capbox" />

        <ImageView
            android:id="@+id/free_icon_capacitor_4505420_1"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="300dp"
            android:contentDescription="free_icon_capacitor_4505420_1"
            android:src="@drawable/free_icon_capacitor_4505420_1" />

        <TextView
            android:id="@+id/tvReceiveData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="370dp"
            android:text="Receive"
            android:textSize="35dp" />

        <ImageView
            android:id="@+id/image_4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="147dp"
            android:contentDescription="image_4"
            android:src="@drawable/image_4" />

        <View
            android:id="@+id/top"
            android:layout_width="410dp"
            android:layout_height="25dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/top" />

        <View
            android:id="@+id/bottom"
            android:layout_width="410dp"
            android:layout_height="25dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="844dp"
            android:background="@drawable/top" />

        <ImageButton
            android:id="@+id/back1_button"
            android:layout_marginTop="750dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="TODO" />
        <ImageButton
            android:id="@+id/listlist_button"
            android:layout_marginTop="750dp"
            android:layout_marginStart="340dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/list"
            android:background="@android:color/transparent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
             />

        <TextView
            android:id="@+id/_2024capstone"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="58dp"
            android:layout_width="183.2dp"
            android:layout_height="23.2dp"
            android:text="@string/capstone"
            />

        <ImageView android:id="@+id/kwlogo"
            android:src="@drawable/kwlogo"
            android:contentDescription="kwlogo"
            android:layout_marginStart="-4dp"
            android:layout_marginTop="34dp"
            android:layout_width="87.62dp"
            android:layout_height="64dp" />

        <ImageView android:id="@+id/bsllogo"
            android:src="@drawable/bsllogo"
            android:contentDescription="bsllogo"
            android:layout_marginStart="74dp"
            android:layout_marginTop="45dp"
            android:layout_width="45dp"
            android:layout_height="43.84dp" />


    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>